# piuma-vault

./: .dockerignore  .easignore  .env.example  .gitignore  README.md  apilisttriggeredbytaskedit.txt  docker-compose.prod.yml  docker-compose.yml  reasonix.toml
rust/: Cargo.toml  Dockerfile  Dockerfile.prod  build.rs
rust/src/: cors.rs  lib.rs  main.rs
rust/src/apps/: embeddings.rs  mod.rs  realtime.rs  web_search.rs
rust/src/apps/agenda/: handlers.rs  mod.rs  models.rs  recurrence.rs  routes.rs
rust/src/apps/agents/: chat.rs  control.rs  dialectic.rs  handlers.rs  identities.rs  memory_admin.rs  mod.rs  models.rs  routes.rs  runner.rs  seed.rs  title.rs  usage.rs
rust/src/apps/api_keys/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
rust/src/apps/auth/: handlers.rs  keys.rs  middleware.rs  mod.rs  models.rs  otp.rs  otp_handlers.rs  rate_limit.rs  routes.rs
rust/src/apps/buckets/: handlers.rs  link.rs  mod.rs  models.rs  routes.rs
rust/src/apps/calendar/: events.rs  handlers.rs  models.rs  routes.rs
rust/src/apps/cron/: events.rs  handlers.rs  mod.rs  models.rs  routes.rs
rust/src/apps/db_dump/: handlers.rs  models.rs  routes.rs
rust/src/apps/email/: handlers.rs  models.rs  routes.rs  service.rs
rust/src/apps/health/: handlers.rs  models.rs  routes.rs
rust/src/apps/image_gen/: config.rs  core.rs  handlers.rs  mod.rs  models.rs  routes.rs
rust/src/apps/llm/: mod.rs  routes.rs
rust/src/apps/notes/: events.rs  handlers.rs  mod.rs  models.rs  routes.rs
rust/src/apps/notifications/: events.rs  expo.rs  handlers.rs  mod.rs  models.rs  notify.rs  routes.rs  schedule.rs  webpush.rs
rust/src/apps/openclaw/: handlers.rs  routes.rs
rust/src/apps/recorder/: handlers.rs  mod.rs  models.rs  routes.rs  session.rs  summarise.rs  ws.rs
rust/src/apps/settings/: handlers.rs  mod.rs  models.rs  routes.rs  screen_lock.rs  store.rs
rust/src/apps/shares/: crypto.rs  handlers.rs  (+3 more)
rust/src/db/: db.rs  db_init.rs
(+584 files in other folders)
